--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="..." />
                             <h4>Bahar SarSaifee</h4>
                             <p class="text-muted">Software Developer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://Github.com/BaharSarsaifee" aria-label="Bahar SarSaifee Github Profile"><i class="bi bi-github"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://Github.com//Bahar-SarSaifee" aria-label="Bahar SarSaifee Github Profile"><i class="bi bi-github"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="mailto:baharsarsaifee@gmail.com" aria-label="Bahar SarSaifee Mail Address"><i class="bi bi-envelope-fill"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/bahar-sarsaifee/" aria-label="Bahar SarSaifee LinkedIn Profile"><i class="bi bi-linkedin"></i></a>
                         </div>
