--- a/index.html
+++ b/index.html
@@ -105,28 +105,28 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi bi-gear fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Failure Prediction</h3>
+                            <h3 class="h4 mb-2">Remaining Useful Life</h3>
                             <p class="text-muted mb-0">Detect issues before they cause costly breakdowns.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi bi-clock fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Real-time Monitoring</h3>
+                            <h3 class="h4 mb-2">Predict Maintenance Time</h3>
                             <p class="text-muted mb-0"> Centralized analysis of sensor data, logs, and reports.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi bi-clipboard-data fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Easy Integration</h3>
+                            <h3 class="h4 mb-2">Anomaly Detection</h3>
                             <p class="text-muted mb-0">Effortlessly connects with your existing systems for smooth setup.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi bi-shield-check fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Secure & Reliable</h3>
+                            <h3 class="h4 mb-2">Still Human-centric</h3>
                             <p class="text-muted mb-0">Protecting your data while boosting performance.</p>
                         </div>
                     </div>
