--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5"><b>Reliability meets innovation</b><br>
+                        <p class="text-white-75 mb-5"><b>Reliability meets Innovation</b><br>
                             Early warnings from AI ensure your energy systems stay efficient and your business stays on track.</p>
                         <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
                     </div>
@@ -104,7 +104,7 @@
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi bi-gear fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="bi bi-hourglass-split fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Remaining Useful Life</h3>
                             <p class="text-muted mb-0">Detect issues before they cause costly breakdowns.</p>
                         </div>
@@ -118,15 +118,15 @@
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi bi-clipboard-data fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="bi bi-exclamation-triangle fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Anomaly Detection</h3>
                             <p class="text-muted mb-0">Effortlessly connects with your existing systems for smooth setup.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi bi-shield-check fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">Still Human-centric</h3>
+                            <div class="mb-2"><i class="bi bi-person-check-fill fs-1 text-primary"></i></div>
+                            <h3 class="h4 mb-2">Still Human-Centric</h3>
                             <p class="text-muted mb-0">Protecting your data while boosting performance.</p>
                         </div>
                     </div>
